More Play page stuff

--- a/pages/play.html
+++ b/pages/play.html
@@ -183,16 +183,19 @@
             Building A Healthy, Happy & Connected Community Since 1915
           </h3>
           <p class="lead pb-4">
-            "Fulfilling the Buhl legacy by providing recreation, education, and
+            Fulfilling the Buhl legacy by providing recreation, education, and
             entertainment while promoting a healthy lifestyle and thriving
-            environment."
+            environment. Buhl Park is a beautiful park - created by Charles
+            Henry Owsley and taking design inspiration from the legendary
+            Central Park in Manhattan, Buhl is one of the crown jewels of Mercer
+            County.
           </p>
         </article>
         <aside
           class="col-md-6 text-center d-flex flex-column align-items-center justify-content-center px-0 shadow-lg"
         >
           <img
-            src="../images/play/buhl_disc_golf.png"
+            src="../images/buhl_rose_garden.png"
             alt=""
             class="img-fluid section-images"
           />
@@ -214,11 +217,9 @@
           class="col-md-6 text-center d-flex flex-column align-items-center justify-content-center"
         >
           <h2 class="display-2 pb-2">Grove City Premium Outlets</h2>
-          <!-- <h3 class="display-6 pb-4">
-            Building A Healthy, Happy & Connected Community Since 1915
-          </h3> -->
+          <h3 class="display-6 pb-4">World Class Shopping</h3>
           <p class="lead pb-4">
-            "Grove City Premium Outlets is western Pennsylvania's premiere
+            Grove City Premium Outlets is western Pennsylvania's premiere
             shopping destination with over 120 of the hottest brand name stores
             including kate spade new york, Coach, Michael Kors, The North Face,
             Under Armour, Vera Bradley and J. Crew Factory Store. The open air
@@ -226,9 +227,126 @@
             I-80 serving Pittsburgh, Youngstown and Erie. Shoppers realize
             25-65% savings off everyday retail and visitors to the area enjoy
             the savings offered by Pennsylvania's tax-free status on most
-            clothing and shoes."
+            clothing and shoes.
           </p>
         </article>
+      </section>
+
+      <!-- Shenango Lake -->
+      <section id="test" class="container-fluid row">
+        <aside
+          class="d-md-none col-md-6 text-center d-flex flex-column align-items-center justify-content-center px-0 shadow-lg mobile-padding"
+        >
+          <img
+            src="../images/play/shenango-lake.jpg"
+            alt=""
+            class="img-fluid"
+          />
+        </aside>
+        <article
+          class="col-md-6 text-center d-flex flex-column align-items-center justify-content-center"
+        >
+          <h2 class="display-2 pb-2">Shenango Lake</h2>
+          <h3 class="display-6 pb-4">
+            Our beautiful lake and nature preserve.
+          </h3>
+          <p class="lead pb-4">
+            Enjoy the outdoors at Shenango River Lake, and experience all it has
+            to offer. Visitors can spend the day picnicking, camping, swimming,
+            or wildlife viewing. Fishing enthusiasts can test the waters for
+            bass, walleye, and a variety of panfish that inhabit the lake.
+            Boating is another popular activity, from water-skiing behind a
+            powerboat to canoeing.
+          </p>
+        </article>
+        <aside
+          class="d-none col-md-6 text-center d-md-flex flex-column align-items-center justify-content-center px-0 shadow-lg mobile-padding"
+        >
+          <img
+            src="../images/play/shenango-lake.jpg"
+            alt=""
+            class="img-fluid"
+          />
+        </aside>
+      </section>
+
+      <!---------------------------------- GOLF ---------------------------------->
+      <section id="test" class="container-fluid row">
+        <aside
+          class="d-md-none col-md-6 text-center d-flex flex-column align-items-center justify-content-center px-0 shadow-lg mobile-padding"
+        >
+          <img
+            src="../images/play/golf-at-avalon.jpg"
+            alt=""
+            class="img-fluid"
+          />
+        </aside>
+        <aside
+          class="d-none col-md-6 text-center d-md-flex flex-column align-items-center justify-content-center px-0 shadow-lg mobile-padding"
+        >
+          <img
+            src="../images/play/golf-at-avalon.jpg"
+            alt=""
+            class="img-fluid"
+          />
+        </aside>
+        <article
+          class="col-md-6 text-center d-flex flex-column align-items-center justify-content-center"
+        >
+          <h2 class="display-2 pb-2">Golf Mercer County</h2>
+          <h3 class="display-6 pb-4">
+            From National League Tournaments to North America's Only Free Course
+          </h3>
+          <p class="lead pb-4">
+            Ever since the Scottish invented the game and first set foot on the
+            American continent - Western Pennsylvania has been well regarded as
+            one of the most idyllic locations for the game of Golf in the world.
+            From the nationally ranked Avalon Golf and Country Club to the
+            free-to-play DumDums Course - from beginner to professional - Mercer
+            County's 11 courses have something to offer everybody.
+          </p>
+        </article>
+      </section>
+
+      <!---------------------------------- RESTAURANTS ---------------------------------->
+      <section id="test" class="container-fluid row">
+        <aside
+          class="d-md-none col-md-6 text-center d-flex flex-column align-items-center justify-content-center px-0 shadow-lg mobile-padding"
+        >
+          <img
+            src="../images/play/tara-restaurants.jpg"
+            alt=""
+            class="img-fluid"
+          />
+        </aside>
+        <article
+          class="col-md-6 text-center d-flex flex-column align-items-center justify-content-center"
+        >
+          <h2 class="display-2 pb-2">Restaurants and Lodging</h2>
+          <h3 class="display-6 pb-4">
+            With a Whopping 481 Restaurants, We're Sure to Have Something to
+            Suit Your Tastes
+          </h3>
+          <p class="lead pb-4">
+            As an area rich in cultural history, family traditions and home
+            cooked goodness, Mercer County's restaurants have migrated beyond a
+            picturesque downtown and found a foothold with avid diners from all
+            over the world. From the classic Italian Muscarella's (featured on
+            the show America's Best Restaurants) in Sharpsville, to the
+            reimagined hip atmosphere of Talbot's in Mercer and the outdoor hub
+            of downtown Sharon, eating in Mercer County is more tapestried than
+            ever.
+          </p>
+        </article>
+        <aside
+          class="d-none col-md-6 text-center d-md-flex flex-column align-items-center justify-content-center px-0 shadow-lg mobile-padding"
+        >
+          <img
+            src="../images/play/tara-restaurants.jpg"
+            alt=""
+            class="img-fluid"
+          />
+        </aside>
       </section>
     </main>
     <script src="../js/bootstrap.bundle.js" async defer></script>
