Removed mobile header padding on play.html

--- a/pages/play.html
+++ b/pages/play.html
@@ -324,18 +324,18 @@
         >
           <h2 class="display-2 pb-2">Restaurants and Lodging</h2>
           <h3 class="display-6 pb-4">
-            With a Whopping 481 Restaurants, We're Sure to Have Something to
-            Suit Your Tastes
+            481 Restaurants, 91 Hotels. A Traveler's Delight.
           </h3>
           <p class="lead pb-4">
             As an area rich in cultural history, family traditions and home
-            cooked goodness, Mercer County's restaurants have migrated beyond a
-            picturesque downtown and found a foothold with avid diners from all
-            over the world. From the classic Italian Muscarella's (featured on
-            the show America's Best Restaurants) in Sharpsville, to the
-            reimagined hip atmosphere of Talbot's in Mercer and the outdoor hub
-            of downtown Sharon, eating in Mercer County is more tapestried than
-            ever.
+            cooked goodness, Mercer County's restaurants and lodges have
+            migrated beyond a picturesque downtown and found a foothold with
+            avid diners and travelers from all over the world. From the classic
+            Italian Muscarella's (featured on the show America's Best
+            Restaurants) in Sharpsville, to the reimagined hip atmosphere of
+            Talbot's in Mercer and the beautiful furnishings of the Tara Inn
+            (see photo), eating and lodging in Mercer County are more tapestried
+            than ever.
           </p>
         </article>
         <aside
