About page header init

--- a/pages/play.html
+++ b/pages/play.html
@@ -475,6 +475,7 @@
       </div>
       <div class="container text-center"></div>
     </footer>
+    <!-- Bootstrap js Bundle -->
     <script src="../js/bootstrap.bundle.js" async defer></script>
     <script src=""></script>
   </body>
