--- a/pages/about.html
+++ b/pages/about.html
@@ -67,9 +67,113 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="../css/styles/about.css" />
   </head>
   <body>
+    <!----------------------------- START NAV ----------------------------->
+    <nav
+      class="navbar navbar-expand-lg fixed-top fs-5 bg-light shadow scrollIn"
+    >
+      <div id="nav-div" class="container-fluid">
+        <a class="navbar-brand fs-3 d-none d-lg-block" href="../index.html">
+          <img
+            src="../images/Homegrown_crop_1.jpg"
+            alt="Logo"
+            class="d-inline-block"
+            height="70"
+          />
+          Discover Mercer County</a
+        >
+        <a
+          id="goMercerCounty"
+          class="navbar-brand fs-3 d-lg-none"
+          href="../index.html"
+        >
+          <img
+            src="../images/Homegrown_crop_1.jpg"
+            alt="Logo"
+            class="d-inline-block"
+            height="70"
+          />
+          Go Mercer County</a
+        >
+        <button
+          id="mobile-nav-button"
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Work
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a
+                    class="dropdown-item"
+                    href="./work.html#job-search-start-form"
+                    >Get Help Finding Work</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="./work.html"
+                    >Jobs in Mercer County</a
+                  >
+                </li>
+              </ul>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="./live.html">Live</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./learn.html">Learn</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./play.html">Play</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./about.html"
+                >About</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!------------------------------------ END NAV ------------------------------------>
+    <header class="shadow-lg text-light">
+      <div class="text-start d-none d-sm-block w-100">
+        <h1 class="display-1">Thanks for Visiting!</h1>
+      </div>
+      <div class="container text-start d-block d-sm-none">
+        <h1 class="display-1">Thanks for Visiting!</h1>
+      </div>
+
+      <!-- <div class="container">
+        <p class="lead display-6">
+          From Our Nationally Renowned Parks, To Our International Golf
+          Competitions, Mercer County Has a Little Bit of Everything
+        </p>
+      </div> -->
+    </header>
+    <!-- Bootstrap js Bundle -->
+    <script src="../js/bootstrap.bundle.js" async defer></script>
     <script src="" async defer></script>
   </body>
 </html>
