about.html tagline added + vertical rule

--- a/pages/about.html
+++ b/pages/about.html
@@ -164,14 +164,32 @@
       <div class="container text-start d-block d-sm-none">
         <h1 class="display-1">Thanks for Visiting!</h1>
       </div>
-
-      <!-- <div class="container">
-        <p class="lead display-6">
-          From Our Nationally Renowned Parks, To Our International Golf
-          Competitions, Mercer County Has a Little Bit of Everything
-        </p>
-      </div> -->
     </header>
+
+    <!-- VERTICAL RULE -->
+    <div
+      class="d-flex flex-column justify-content-center align-items-center mb-4"
+    >
+      <h2 class="text-center display-2 quicksand">
+        Building a good life should be accessible to everybody
+      </h2>
+      <p class="lead text-center ch-limit mx-5">
+        We're The Future Leaders organization - a part of the Mercer County
+        Homegrown Initiative by Penn-Northwest Co. The Future Leaders are a
+        group of young business leaders within the Mercer County area who are
+        dedicated to improving the quality of life in our region. Our mission is
+        to provide the necessary resources for young adults to thrive in our
+        community. Using our connections with local businesses and the renowned
+        colleges and trade schools in our area, we work to facilitate a portal
+        through which everyone can connect with the opportunities that exist
+        right here around us.
+      </p>
+    </div>
+    <div
+      class="d-flex justify-content-center align-items-center vertical-rule-height"
+    >
+      <div class="vr"></div>
+    </div>
     <!-- Bootstrap js Bundle -->
     <script src="../js/bootstrap.bundle.js" async defer></script>
     <script src="" async defer></script>
