Added iframe component to about.html

--- a/pages/about.html
+++ b/pages/about.html
@@ -166,9 +166,9 @@
       </div>
     </header>
 
-    <!-- VERTICAL RULE -->
+    <!-------------- VERTICAL RULE -------------->
     <div
-      class="d-flex flex-column justify-content-center align-items-center mb-4"
+      class="d-flex flex-column justify-content-center align-items-center mb-5"
     >
       <h2 class="text-center display-2 quicksand">
         Building a good life should be accessible to everybody
@@ -190,6 +190,28 @@
     >
       <div class="vr"></div>
     </div>
+
+    <main class="mt-5">
+      <h2 class="display-3 quicksand text-center mb-5">Some of our stories</h2>
+      <div class="container">
+        <div class="ratio ratio-16x9">
+          <!-- <iframe
+            src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0"
+            title="YouTube video"
+            allowfullscreen
+          ></iframe> -->
+          <iframe
+            width="560"
+            height="315"
+            src="https://www.youtube.com/embed/jeTBPQNwHOc"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+    </main>
     <!-- Bootstrap js Bundle -->
     <script src="../js/bootstrap.bundle.js" async defer></script>
     <script src="" async defer></script>
