Replaced Lorem on index.html with copy text

--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
             <div class="container" id="work-scrollIn-ID">
               <h2 class="display-1 work-scrollIn-class scrollIn">Work Hard</h2>
               <p class="lead work-scrollIn-class scrollIn">
-                Mercer County is a great place to work. Eius odit suscipit
-                perspiciatis? Obcaecati molestiae in, magnam unde veritatis
-                consectetur fugit dolorum, saepe ipsam iste accusantium delectus
-                error consequatur nulla et.
+                With over 2,000 businesses in Mercer County, our expansive
+                economy spans over a range of industries. From manufacturing and
+                healthcare, to tourism and information technology, finding a
+                career is easier than ever. Let us help connect you today!
               </p>
               <div class="work-scrollIn-class scrollIn">
                 <h3 class="display-4">Job Search Help</h3>
@@ -210,11 +210,9 @@
                 </button> -->
               </div>
               <p class="lead work-scrollIn-class scrollIn">
-                Looking for work and don't know where to start, or just need a
-                helping hand? Eius odit suscipit perspiciatis? Obcaecati
-                molestiae in, magnam unde veritatis consectetur fugit dolorum,
-                saepe ipsam iste accusantium delectus error consequatur nulla
-                et.
+                Our job search tool helps people looking for work in the Mercer
+                County Area get connected with a job that's a perfect fit. Click
+                the button below to get started!
               </p>
               <div class="work-scrollIn-class scrollIn">
                 <a
@@ -249,10 +247,12 @@
             <div class="container">
               <h2 class="display-1 amenities-scrollIn scrollIn">Play Easy</h2>
               <p class="lead amenities-scrollIn scrollIn">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
-                odit suscipit perspiciatis? Obcaecati molestiae in, magnam unde
-                veritatis consectetur fugit dolorum, saepe ipsam iste
-                accusantium delectus error consequatur nulla et.
+                Whether you enjoy quiet, serene outdoor adventures or an upbeat
+                night life, Mercer County has it all. Take a stroll through Buhl
+                Park, explore nearly 20 state game lands, enjoy the eclectic
+                restaurant scene, or spend time in the bustling downtown of
+                Sharon or Grove City. Resident also take advantage of the
+                convenient 1-hour drive to Cleveland, Erie, and Pittsburgh.
               </p>
               <div class="amenities-scrollIn scrollIn">
                 <h3 class="display-4">Current Events</h3>
@@ -261,10 +261,8 @@
                 </button> -->
               </div>
               <p class="lead amenities-scrollIn scrollIn">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
-                odit suscipit perspiciatis? Obcaecati molestiae in, magnam unde
-                veritatis consectetur fugit dolorum, saepe ipsam iste
-                accusantium delectus error consequatur nulla et.
+                Looking for a fun event? Experience what makes Mercer County so
+                great. Check out this listing of some local community events!
               </p>
               <div class="amenities-scrollIn scrollIn">
                 <a
@@ -296,10 +294,9 @@
             <div class="container">
               <h2 class="display-1 live-scrollIn scrollIn">Make A Home</h2>
               <p class="lead live-scrollIn scrollIn">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
-                odit suscipit perspiciatis? Obcaecati molestiae in, magnam unde
-                veritatis consectetur fugit dolorum, saepe ipsam iste
-                accusantium delectus error consequatur nulla et.
+                With a low cost of living, low traffic, and tightknit
+                communities, making Mercer County your home is a great choice.
+                Click the link below to compare the cost of living to your area!
               </p>
               <div class="live-scrollIn scrollIn">
                 <h3 class="display-4">Find Your Place</h3>
@@ -308,10 +305,8 @@
                 </button> -->
               </div>
               <p class="lead live-scrollIn scrollIn">
-                Take the quiz. Eius odit suscipit perspiciatis? Obcaecati
-                molestiae in, magnam unde veritatis consectetur fugit dolorum,
-                saepe ipsam iste accusantium delectus error consequatur nulla
-                et.
+                Take our Neighborhood quiz and see which town is the perfect fit
+                for you!
               </p>
               <div class="live-scrollIn scrollIn">
                 <a
