Change university -> college on learn.html. About page h2 margin-x added

--- a/pages/about.html
+++ b/pages/about.html
@@ -170,7 +170,7 @@
     <div
       class="d-flex flex-column justify-content-center align-items-center mb-5"
     >
-      <h2 class="text-center display-2 quicksand">
+      <h2 class="text-center display-2 quicksand mx-3">
         Building a good life should be accessible to everybody
       </h2>
       <p class="lead text-center ch-limit mx-5">
@@ -281,17 +281,6 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
-        <!-- <div class="ratio ratio-16x9">
-          <iframe
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/jeTBPQNwHOc"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-        </div> -->
       </div>
     </main>
     <!-- Bootstrap js Bundle -->
