--- a/pages/learn.html
+++ b/pages/learn.html
@@ -285,10 +285,10 @@
       </section>
       <hr class="d-none d-lg-block" />
 
-      <!-------------------------------- THIEL UNIVERSITY -------------------------------->
+      <!-------------------------------- THIEL COLLEGE -------------------------------->
       <section class="d-none d-lg-flex section-margin-top">
         <article>
-          <h3 class="display-3">Thiel University</h3>
+          <h3 class="display-3">Thiel College</h3>
           <p class="lead">
             Founded in 1866, Thiel College is an independent liberal arts
             college in western Pennsylvania, offering innovative undergraduate
@@ -326,7 +326,7 @@
           />
         </aside>
         <article class="pt-3">
-          <h3 class="display-3">Thiel University</h3>
+          <h3 class="display-3">Thiel College</h3>
           <p class="lead">
             Founded in 1866, Thiel College is an independent liberal arts
             college in western Pennsylvania, offering innovative undergraduate
@@ -403,10 +403,10 @@
       </section>
       <hr class="d-none d-lg-block" />
 
-      <!-------------------------------- WEST MINSTER UNIVERSITY -------------------------------->
+      <!-------------------------------- WEST MINSTER COLLEGE -------------------------------->
       <section class="d-none d-lg-flex section-margin-top">
         <article>
-          <h3 class="display-3">Westminster University</h3>
+          <h3 class="display-3">Westminster College</h3>
           <p class="lead">
             &quot;We are Westminster College. We&rsquo;re closer than you think,
             nestled within the charming town of New Wilmington, just one hour
@@ -432,7 +432,7 @@
         </aside>
       </section>
 
-      <!-- WESTMINSTER UNIVERSITY MOBILE -->
+      <!-- WESTMINSTER College MOBILE -->
       <section class="d-lg-none section-margin-top">
         <aside>
           <img
@@ -442,7 +442,7 @@
           />
         </aside>
         <article class="pt-3">
-          <h3 class="display-3">Westminster University</h3>
+          <h3 class="display-3">Westminster College</h3>
           <p class="lead">
             &quot;We are Westminster College. We&rsquo;re closer than you think,
             nestled within the charming town of New Wilmington, just one hour
