About page h2 p margin bottom added

--- a/pages/about.html
+++ b/pages/about.html
@@ -170,19 +170,21 @@
     <div
       class="d-flex flex-column justify-content-center align-items-center mb-5"
     >
-      <h2 class="text-center display-2 quicksand mx-3">
+      <h2 class="text-center display-2 quicksand mx-3 mb-5">
         Building a good life should be accessible to everybody
       </h2>
-      <p class="lead text-center ch-limit mx-5">
+      <p class="lead text-center ch-limit mx-5 mb-5">
         We're The Future Leaders organization - a part of the Mercer County
         Homegrown Initiative by Penn-Northwest Co. The Future Leaders are a
         group of young business leaders within the Mercer County area who are
-        dedicated to improving the quality of life in our region. Our mission is
-        to provide the necessary resources for young adults to thrive in our
-        community. Using our connections with local businesses and the renowned
-        colleges and trade schools in our area, we work to facilitate a portal
-        through which everyone can connect with the opportunities that exist
-        right here around us.
+        dedicated to improving the quality of life in our region.
+      </p>
+      <p class="lead text-center ch-limit mx-5">
+        Our mission is to provide the necessary resources for young adults to
+        thrive in our community. Using our connections with local businesses and
+        the renowned colleges and trade schools in our area, we work to
+        facilitate a portal through which everyone can connect with the
+        opportunities that exist right here around us.
       </p>
     </div>
     <div
