--- a/pages/about.html
+++ b/pages/about.html
@@ -166,7 +166,6 @@
       </div>
     </header>
 
-    <!-------------- VERTICAL RULE -------------->
     <div
       class="d-flex flex-column justify-content-center align-items-center mb-5"
     >
@@ -187,6 +186,7 @@
         opportunities that exist right here around us.
       </p>
     </div>
+    <!-------------- VERTICAL RULE -------------->
     <div
       class="d-flex justify-content-center align-items-center vertical-rule-height"
     >
@@ -195,6 +195,8 @@
 
     <main class="my-5">
       <h2 class="display-3 quicksand text-center mb-5">Some of our stories</h2>
+
+      <!-- Homegrown Videos -->
       <div class="container">
         <div
           id="carouselExampleIndicators"
@@ -283,6 +285,12 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
+      </div>
+
+      <div
+        class="d-flex justify-content-center align-items-center vertical-rule-height mt-5"
+      >
+        <div class="vr"></div>
       </div>
     </main>
     <!-- Bootstrap js Bundle -->
