About page Our Members section added

--- a/pages/about.html
+++ b/pages/about.html
@@ -180,8 +180,8 @@
       </p>
       <p class="lead text-center ch-limit mx-4">
         Our mission is to provide the necessary resources for young adults to
-        thrive in our community. Using our connections with local businesses and
-        the renowned colleges and trade schools in our area, we work to
+        thrive in our community. Using our connections with local businesses,
+        and the renowned colleges and trade schools in our area, we work to
         facilitate a portal through which everyone can connect with the
         opportunities that exist right here around us.
       </p>
@@ -225,6 +225,11 @@
               aria-label="Slide 3"
             ></button>
           </div>
+          <!--  -->
+          <!--  -->
+          <!--  -->
+          <!--  -->
+          <!-------------------------------------- VIDEOS -------------------------------------->
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="500000000">
               <div class="ratio ratio-16x9">
@@ -292,6 +297,229 @@
       >
         <div class="vr"></div>
       </div>
+
+      <!----------------------------------------------------- OUR MEMBERS ----------------------------------------------------->
+      <section class="container text-center my-5">
+        <h2 class="display-5 quicksand">Our Members</h2>
+        <div
+          id="carouselExampleDark"
+          class="carousel carousel-dark slide"
+          data-bs-ride="carousel"
+        >
+          <!-- <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide-to="3"
+              aria-label="Slide 4"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide-to="4"
+              aria-label="Slide 5"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide-to="5"
+              aria-label="Slide 6"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide-to="6"
+              aria-label="Slide 7"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide-to="7"
+              aria-label="Slide 8"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleDark"
+              data-bs-slide-to="8"
+              aria-label="Slide 9"
+            ></button>
+          </div> -->
+          <!--  -->
+          <!--  -->
+          <!--  -->
+          <!--  -->
+          <!-------------------------------------- OUR MEMBERS -------------------------------------->
+          <div class="carousel-inner">
+            <!-- Alex Hudson -->
+            <div class="carousel-item active" data-bs-interval="5000">
+              <img
+                src="../images/about/team/alex-hudson.jpg"
+                class="d-block w-50 img-fluid rounded mx-auto border border-primary"
+                alt="A picture of Alex Hudson"
+              />
+              <div class="carousel-caption d-none d-md-block">
+                <h3 class="display-6">Alex Hudson</h3>
+                <p class="">Placeholder text placeholder placeholder</p>
+              </div>
+            </div>
+            <!-- Gary -->
+            <div class="carousel-item" data-bs-interval="5000">
+              <img
+                src="../images/about/team/gary.jpg"
+                class="d-block w-50 img-fluid rounded mx-auto border border-warning"
+                alt="A picture of Gary"
+              />
+              <div class="carousel-caption d-none d-md-block text-light">
+                <h3 class="display-6">Gary</h3>
+                <p class="">Placeholder text placeholder placeholder</p>
+              </div>
+            </div>
+
+            <!-- Jake Rickert -->
+            <div class="carousel-item" data-bs-interval="5000">
+              <img
+                src="../images/about/team/jake.png"
+                class="d-block w-50 img-fluid rounded mx-auto border border-primary"
+                alt="A picture of Jake Rickert"
+              />
+              <div class="carousel-caption d-none d-md-block text-light">
+                <h3 class="display-6">Jake Rickert</h3>
+                <p class="text-center">
+                  Placeholder text placeholder placeholder
+                </p>
+              </div>
+            </div>
+
+            <!-- Jeff Linn -->
+            <div class="carousel-item" data-bs-interval="5000">
+              <img
+                src="../images/about/team/jeff-linn.jpg"
+                class="d-block w-50 img-fluid rounded mx-auto border border-warning"
+                alt="A picture of Jeff Linn"
+              />
+              <div class="carousel-caption d-none d-md-block text-light">
+                <h3 class="display-6">Jeff Linn</h3>
+                <p class="text-center">
+                  Placeholder text placeholder placeholder
+                </p>
+              </div>
+            </div>
+
+            <!-- Kaylee -->
+            <div class="carousel-item" data-bs-interval="5000">
+              <img
+                src="../images/about/team/kaylee.png"
+                class="d-block w-50 img-fluid rounded mx-auto border border-primary img-max-height"
+                alt="A picture of Kaylee"
+              />
+              <div class="carousel-caption d-none d-md-block text-light">
+                <h3 class="display-6">Kaylee</h3>
+                <p class="text-center">
+                  Placeholder text placeholder placeholder
+                </p>
+              </div>
+            </div>
+
+            <!-- Kerri Erikson -->
+            <div class="carousel-item" data-bs-interval="5000">
+              <img
+                src="../images/about/team/kerri-erikson.jpg"
+                class="d-block w-50 img-fluid rounded mx-auto border border-warning"
+                alt="A picture of Kerri Erikson"
+              />
+              <div class="carousel-caption d-none d-md-block text-dark">
+                <h3 class="display-6">Kerri Erikson</h3>
+                <p class="text-center">
+                  Placeholder text placeholder placeholder
+                </p>
+              </div>
+            </div>
+
+            <!-- Kolten Hoffman -->
+            <div class="carousel-item" data-bs-interval="5000">
+              <img
+                src="../images/about/team/kolten-hoffman.jpg"
+                class="d-block w-50 img-fluid rounded mx-auto border border-primary"
+                alt="A picture of Kolten Hoffman"
+              />
+              <div class="carousel-caption d-none d-md-block text-dark">
+                <h3 class="display-6">Kolten Hoffman</h3>
+                <p class="text-center">
+                  Placeholder text placeholder placeholder
+                </p>
+              </div>
+            </div>
+
+            <!-- Rod Wilt -->
+            <div class="carousel-item" data-bs-interval="5000">
+              <img
+                src="../images/about/team/rod-wilt.jpg"
+                class="d-block w-50 img-fluid rounded mx-auto border border-warning"
+                alt="A picture of Rod Wilt"
+              />
+              <div class="carousel-caption d-none d-md-block text-light">
+                <h3 class="display-6">Rod Wilt</h3>
+                <p class="text-center">
+                  Placeholder text placeholder placeholder
+                </p>
+              </div>
+            </div>
+
+            <!-- Trevor Bromley -->
+            <div class="carousel-item" data-bs-interval="5000">
+              <img
+                src="../images/about/team/trevor-bromley.jpg"
+                class="d-block w-50 img-fluid rounded mx-auto border border-primary"
+                alt="A picture of Trevor Bromley"
+              />
+              <div class="carousel-caption d-none d-md-block text-light">
+                <h3 class="display-6">Trevor Bromley</h3>
+                <p class="text-center">
+                  Placeholder text placeholder placeholder
+                </p>
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleDark"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleDark"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
     </main>
     <!-- Bootstrap js Bundle -->
     <script src="../js/bootstrap.bundle.js" async defer></script>
