Added margin to Our Members header on About page

--- a/pages/about.html
+++ b/pages/about.html
@@ -300,7 +300,7 @@
 
       <!----------------------------------------------------- OUR MEMBERS ----------------------------------------------------->
       <section class="container text-center my-5">
-        <h2 class="display-5 quicksand">Our Members</h2>
+        <h2 class="display-5 quicksand mb-4">Our Members</h2>
         <div
           id="carouselExampleDark"
           class="carousel carousel-dark slide"
