--- a/index.html
+++ b/index.html
@@ -377,34 +377,22 @@
               <ul class="list-unstyled text-light">
                 <li>
                   <a class="footer-list-item" href="./pages/live.html"
-                    >Live in Mercer County <span>&gt;</span></a
-                  >
+                    >Live in Mercer County
+                  </a>
                 </li>
                 <li>
                   <a class="footer-list-item" href="./pages/learn.html"
-                    >Schools and Education <span>&gt;</span></a
-                  >
+                    >Schools and Education
+                  </a>
                 </li>
                 <li>
                   <a class="footer-list-item" href="./pages/work.html"
-                    >Jobs in Mercer County <span>&gt;</span></a
-                  >
+                    >Jobs in Mercer County
+                  </a>
                 </li>
-                <li>
-                  <a class="footer-list-item" href="./pages/play.html"
-                    >Play <span>&gt;</span></a
-                  >
-                </li>
-                <li>
-                  <a class="footer-list-item" href="#"
-                    >About Us <span>&gt;</span></a
-                  >
-                </li>
-                <li>
-                  <a class="footer-list-item" href="#"
-                    >Link <span>&gt;</span></a
-                  >
-                </li>
+                <!-- <li>
+                  <a class="footer-list-item" href="#">Link </a>
+                </li> -->
               </ul>
             </nav>
             <nav>
@@ -413,10 +401,18 @@
                   <a
                     class="footer-list-item"
                     href="./pages/work.html#job-search-start-form"
-                    >Get Help Finding Work <span>&gt;</span></a
-                  >
+                    >Get Help Finding Work
+                  </a>
                 </li>
                 <li>
+                  <a class="footer-list-item" href="./pages/play.html">Play </a>
+                </li>
+                <li>
+                  <a class="footer-list-item" href="./pages/about.html"
+                    >About Us
+                  </a>
+                </li>
+                <!-- <li>
                   <a class="footer-list-item" href="#"
                     >Click Me <span>&gt;</span></a
                   >
@@ -440,7 +436,7 @@
                   <a class="footer-list-item" href="#"
                     >Click Me <span>&gt;</span></a
                   >
-                </li>
+                </li> -->
               </ul>
             </nav>
           </aside>
@@ -490,33 +486,31 @@
                   <a
                     class="footer-list-item"
                     href="./pages/work.html#job-search-start-form"
-                    >Get Help Finding Work <span>&gt;</span></a
-                  >
+                    >Get Help Finding Work
+                  </a>
                 </li>
                 <li class="scrollIn footer-anchor-nav-scrollIn">
-                  <a class="footer-list-item" href="#"
-                    >Jobs in Mercer County <span>&gt;</span></a
-                  >
+                  <a class="footer-list-item" href="./pages/work.html"
+                    >Jobs in Mercer County
+                  </a>
                 </li>
                 <li class="scrollIn footer-anchor-nav-scrollIn">
                   <a class="footer-list-item" href="./pages/live.html"
-                    >Live in Mercer County<span>&gt;</span></a
+                    >Live in Mercer County</a
                   >
                 </li>
                 <li class="scrollIn footer-anchor-nav-scrollIn">
                   <a class="footer-list-item" href="./pages/learn.html"
-                    >Schools and Education <span>&gt;</span></a
-                  >
+                    >Schools and Education
+                  </a>
                 </li>
                 <li class="scrollIn footer-anchor-nav-scrollIn">
-                  <a class="footer-list-item" href="./pages/play.html"
-                    >Play <span>&gt;</span></a
-                  >
+                  <a class="footer-list-item" href="./pages/play.html">Play </a>
                 </li>
                 <li class="scrollIn footer-anchor-nav-scrollIn">
-                  <a class="footer-list-item" href="#"
-                    >About Us <span>&gt;</span></a
-                  >
+                  <a class="footer-list-item" href="./pages/about.html"
+                    >About Us
+                  </a>
                 </li>
               </ul>
             </nav>
