Changed all occurances of Go Mercer Country to Homegrown Mercer County

--- a/pages/play.html
+++ b/pages/play.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Play - Go Mercer Country</title>
+    <title>Play - Homegrown Mercer County</title>
     <meta
       name="description"
-      content="Helping those in Mercer Country, PA, Find Work, Homes, Schools, Activities, and Community"
+      content="Helping those in Mercer County, PA, Find Work, Homes, Schools, Activities, and Community"
     />
     <!---------------------------------------- Facebook Meta Tags ---------------------------------------->
     <meta
@@ -16,12 +16,12 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="Go Mercer Country - By Penn-Northwest's Homegrown Initiative"
+      content="Homegrown Mercer County - By Penn-Northwest's Homegrown Initiative"
     />
-    <meta property="og:site_name" content="Go Mercer County" />
+    <meta property="og:site_name" content="Homegrown Mercer County" />
     <meta
       property="og:description"
-      content="Helping those in Mercer Country, PA, Find Work, Homes, Schools, Activities, and Community"
+      content="Helping those in Mercer County, PA, Find Work, Homes, Schools, Activities, and Community"
     />
     <meta property="og:image" content="https://i.imgur.com/8Osedu6.png" />
 
@@ -33,7 +33,7 @@
     />
     <meta
       name="twitter:image:alt"
-      content="The Homepage for the Go Mercer County Site"
+      content="The Homepage for the Homegrown Mercer County Site"
     />
     <meta
       property="twitter:url"
@@ -41,11 +41,11 @@
     />
     <meta
       name="twitter:title"
-      content="Go Mercer Country - By Penn-Northwest's Homegrown Initiative"
+      content="Homegrown Mercer County - By Penn-Northwest's Homegrown Initiative"
     />
     <meta
       name="twitter:description"
-      content="Helping those in Mercer Country, PA, Find Work, Homes, Schools, Activities, and Community"
+      content="Helping those in Mercer County, PA, Find Work, Homes, Schools, Activities, and Community"
     />
     <meta name="twitter:image" content="https://i.imgur.com/8Osedu6.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -81,7 +81,7 @@
             class="d-inline-block"
             height="70"
           />
-          Discover Mercer County</a
+          Homegrown Mercer County</a
         >
         <a
           id="goMercerCounty"
@@ -94,7 +94,7 @@
             class="d-inline-block"
             height="70"
           />
-          Go Mercer County</a
+          Homegrown Mercer County</a
         >
         <button
           id="mobile-nav-button"
@@ -301,7 +301,7 @@
             Ever since the Scottish invented the game and first set foot on the
             American continent - Western Pennsylvania has been well regarded as
             one of the most idyllic locations for the game of Golf in the world.
-            From the nationally ranked Avalon Golf and Country Club to the
+            From the nationally ranked Avalon Golf and County Club to the
             free-to-play DumDums Course - from beginner to professional - Mercer
             County's 11 courses have something to offer everybody.
           </p>
