--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Go Mercer Country - By Penn-Northwest's Homegrown Initiative</title>
+    <title>
+      Homegrown Mercer County - By Penn-Northwest's Homegrown Initiative
+    </title>
     <meta
       name="description"
-      content="Helping those in Mercer Country, PA, Find Work, Homes, Schools, Activities, and Community"
+      content="Helping those in Mercer County, PA, Find Work, Homes, Schools, Activities, and Community"
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -19,12 +21,12 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="Go Mercer Country - By Penn-Northwest's Homegrown Initiative"
+      content="Homegrown Mercer County - By Penn-Northwest's Homegrown Initiative"
     />
-    <meta property="og:site_name" content="Go Mercer County" />
+    <meta property="og:site_name" content="Homegrown Mercer County" />
     <meta
       property="og:description"
-      content="Helping those in Mercer Country, PA, Find Work, Homes, Schools, Activities, and Community"
+      content="Helping those in Mercer County, PA, Find Work, Homes, Schools, Activities, and Community"
     />
     <meta property="og:image" content="https://i.imgur.com/8Osedu6.png" />
 
@@ -36,7 +38,7 @@
     />
     <meta
       name="twitter:image:alt"
-      content="The Homepage for the Go Mercer County Site"
+      content="The Homepage for the Homegrown Mercer County Site"
     />
     <meta
       property="twitter:url"
@@ -44,11 +46,11 @@
     />
     <meta
       name="twitter:title"
-      content="Go Mercer Country - By Penn-Northwest's Homegrown Initiative"
+      content="Homegrown Mercer County - By Penn-Northwest's Homegrown Initiative"
     />
     <meta
       name="twitter:description"
-      content="Helping those in Mercer Country, PA, Find Work, Homes, Schools, Activities, and Community"
+      content="Helping those in Mercer County, PA, Find Work, Homes, Schools, Activities, and Community"
     />
     <meta name="twitter:image" content="https://i.imgur.com/8Osedu6.png" />
 
@@ -92,7 +94,7 @@
             class="d-inline-block"
             height="70"
           />
-          Discover Mercer County</a
+          Homegrown Mercer County</a
         >
         <a id="goMercerCounty" class="navbar-brand fs-3 d-lg-none" href="#">
           <img
@@ -101,7 +103,7 @@
             class="d-inline-block"
             height="70"
           />
-          Go Mercer County</a
+          Homegrown Mercer County</a
         >
         <button
           id="mobile-nav-button"
@@ -194,7 +196,7 @@
           <div id="work-content-mobile" class="deskewed-box-work-section">
             <!-- Move the below div's position around to shift diagonal page content -->
             <!-- XL -->
-            <!-- <div class="container d-none d-xl-block"></div> -->
+
             <div class="container" id="work-scrollIn-ID">
               <h2 class="display-1 work-scrollIn-class scrollIn">Work Hard</h2>
               <p class="lead work-scrollIn-class scrollIn">
@@ -205,9 +207,6 @@
               </p>
               <div class="work-scrollIn-class scrollIn">
                 <h3 class="display-4">Job Search Help</h3>
-                <!-- <button type="button" class="btn btn-secondary">
-                  Secondary
-                </button> -->
               </div>
               <p class="lead work-scrollIn-class scrollIn">
                 Our job search tool helps people looking for work in the Mercer
@@ -243,7 +242,7 @@
             <!-- Move the below div's position a
               round to shift diagonal page content -->
             <!-- XL -->
-            <!-- <div class="container d-none d-xl-block"></div> -->
+
             <div class="container">
               <h2 class="display-1 amenities-scrollIn scrollIn">Play Easy</h2>
               <p class="lead amenities-scrollIn scrollIn">
@@ -256,9 +255,6 @@
               </p>
               <div class="amenities-scrollIn scrollIn">
                 <h3 class="display-4">Current Events</h3>
-                <!-- <button type="button" class="btn btn-secondary">
-                  Secondary
-                </button> -->
               </div>
               <p class="lead amenities-scrollIn scrollIn">
                 Looking for a fun event? Experience what makes Mercer County so
@@ -287,10 +283,6 @@
       <section class="container-fluid px-0 shadow-lg" id="live-section">
         <div class="diagonal-box-3 bg-light">
           <div id="live-content-mobile" class="deskewed-box-live-section">
-            <!-- Move the below div's position a
-              round to shift diagonal page content -->
-            <!-- XL -->
-            <!-- <div class="container d-none d-xl-block"></div> -->
             <div class="container">
               <h2 class="display-1 live-scrollIn scrollIn">Make A Home</h2>
               <p class="lead live-scrollIn scrollIn">
@@ -300,9 +292,6 @@
               </p>
               <div class="live-scrollIn scrollIn">
                 <h3 class="display-4">Find Your Place</h3>
-                <!-- <button type="button" class="btn btn-secondary">
-                  Secondary
-                </button> -->
               </div>
               <p class="lead live-scrollIn scrollIn">
                 Take our Neighborhood quiz and see which town is the perfect fit
@@ -325,7 +314,6 @@
           </div>
         </div>
       </section>
-      <!-- <div id="mobile-picture-3" class="container shadow-lg"></div> -->
 
       <!-- Windy Road Parallax Divider -->
       <section class="container-fluid px-0"></section>
@@ -342,9 +330,6 @@
           <hr />
           <form id="enter-email-for-updates">
             <div id="footer-email-input" class="input-group">
-              <!-- <label for="exampleInputEmail1" class="form-label"
-                >Enter Your Email To Join Our Mailing List!</label
-              > -->
               <input
                 type="email"
                 class="form-control bg-light"
@@ -359,9 +344,6 @@
               >
                 SEND
               </button>
-              <!-- <div id="emailHelp" class="form-text">
-                We'll never share your email with anyone else.
-              </div> -->
             </div>
           </form>
         </div>
@@ -390,9 +372,6 @@
                     >Jobs in Mercer County
                   </a>
                 </li>
-                <!-- <li>
-                  <a class="footer-list-item" href="#">Link </a>
-                </li> -->
               </ul>
             </nav>
             <nav>
@@ -412,31 +391,6 @@
                     >About Us
                   </a>
                 </li>
-                <!-- <li>
-                  <a class="footer-list-item" href="#"
-                    >Click Me <span>&gt;</span></a
-                  >
-                </li>
-                <li>
-                  <a class="footer-list-item" href="#"
-                    >Click Me <span>&gt;</span></a
-                  >
-                </li>
-                <li>
-                  <a class="footer-list-item" href="#"
-                    >Click Me <span>&gt;</span></a
-                  >
-                </li>
-                <li>
-                  <a class="footer-list-item" href="#"
-                    >Click Me <span>&gt;</span></a
-                  >
-                </li>
-                <li>
-                  <a class="footer-list-item" href="#"
-                    >Click Me <span>&gt;</span></a
-                  >
-                </li> -->
               </ul>
             </nav>
           </aside>
@@ -453,10 +407,6 @@
           <p class="lead scrollIn">Enter Email To Join Our Mailing List!</p>
           <form>
             <div class="input-group">
-              <!-- <label for="exampleInputEmail1" class="form-label"
-                >Enter Your Email To Join Our Mailing List!</label
-              > -->
-              <!-- <label for="footerEmail">Test</label> -->
               <input
                 type="email"
                 class="form-control bg-light scrollIn"
@@ -472,9 +422,6 @@
               >
                 SEND
               </button>
-              <!-- <div id="emailHelp" class="form-text">
-                We'll never share your email with anyone else.
-              </div> -->
             </div>
           </form>
           <hr />
@@ -516,8 +463,6 @@
             </nav>
           </aside>
         </div>
-
-        <!-- <h2 class="d-xl-none text-light">Test</h2> -->
       </footer>
     </main>
 
