--- a/pages/about.html
+++ b/pages/about.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>About - Go Mercer Country</title>
+    <title>About - Homegrown Mercer County</title>
     <meta
       name="description"
-      content="Helping those in Mercer Country, PA, Find Work, Homes, Schools, Activities, and Community"
+      content="Helping those in Mercer County, PA, Find Work, Homes, Schools, Activities, and Community"
     />
     <!---------------------------------------- Facebook Meta Tags ---------------------------------------->
     <meta
@@ -16,12 +16,12 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
-      content="Go Mercer Country - By Penn-Northwest's Homegrown Initiative"
+      content="Homegrown Mercer County - By Penn-Northwest's Homegrown Initiative"
     />
-    <meta property="og:site_name" content="Go Mercer County" />
+    <meta property="og:site_name" content="Homegrown Mercer County" />
     <meta
       property="og:description"
-      content="Helping those in Mercer Country, PA, Find Work, Homes, Schools, Activities, and Community"
+      content="Helping those in Mercer County, PA, Find Work, Homes, Schools, Activities, and Community"
     />
     <meta property="og:image" content="https://i.imgur.com/8Osedu6.png" />
 
@@ -33,7 +33,7 @@
     />
     <meta
       name="twitter:image:alt"
-      content="The Homepage for the Go Mercer County Site"
+      content="The Homepage for the Homegrown Mercer County Site"
     />
     <meta
       property="twitter:url"
@@ -41,11 +41,11 @@
     />
     <meta
       name="twitter:title"
-      content="Go Mercer Country - By Penn-Northwest's Homegrown Initiative"
+      content="Homegrown Mercer County - By Penn-Northwest's Homegrown Initiative"
     />
     <meta
       name="twitter:description"
-      content="Helping those in Mercer Country, PA, Find Work, Homes, Schools, Activities, and Community"
+      content="Helping those in Mercer County, PA, Find Work, Homes, Schools, Activities, and Community"
     />
     <meta name="twitter:image" content="https://i.imgur.com/8Osedu6.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -82,7 +82,7 @@
             class="d-inline-block"
             height="70"
           />
-          Discover Mercer County</a
+          Homegrown Mercer County</a
         >
         <a
           id="goMercerCounty"
@@ -95,7 +95,7 @@
             class="d-inline-block"
             height="70"
           />
-          Go Mercer County</a
+          Homegrown Mercer County</a
         >
         <button
           id="mobile-nav-button"
