--- a/pages/learn.html
+++ b/pages/learn.html
@@ -10,10 +10,7 @@
     />
 
     <!--------------------------------------- Facebook Meta Tags --------------------------------------->
-    <meta
-      property="og:url"
-      content="https://pndc-homegrown-initiative-test-server.netlify.app"
-    />
+    <meta property="og:url" content="http://www.homegrownmc.com/" />
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
@@ -29,18 +26,12 @@
 
     <!--------------------------------------- Twitter Meta Tags --------------------------------------->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      property="twitter:domain"
-      content="pndc-homegrown-initiative-test-server.netlify.app"
-    />
+    <meta property="twitter:domain" content="http://www.homegrownmc.com/" />
     <meta
       name="twitter:image:alt"
       content="The Homepage for the Homegrown Mercer County Site"
     />
-    <meta
-      property="twitter:url"
-      content="https://pndc-homegrown-initiative-test-server.netlify.app"
-    />
+    <meta property="twitter:url" content="http://www.homegrownmc.com/" />
     <meta
       name="twitter:title"
       content="Homegrown Mercer County - By Penn-Northwest's Homegrown Initiative"
