--- a/pages/play.html
+++ b/pages/play.html
@@ -9,10 +9,7 @@
       content="Helping those in Mercer County, PA, Find Work, Homes, Schools, Activities, and Community"
     />
     <!---------------------------------------- Facebook Meta Tags ---------------------------------------->
-    <meta
-      property="og:url"
-      content="https://pndc-homegrown-initiative-test-server.netlify.app"
-    />
+    <meta property="og:url" content="http://www.homegrownmc.com/" />
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
@@ -27,18 +24,12 @@
 
     <!---------------------------------------- Twitter Meta Tags ---------------------------------------->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      property="twitter:domain"
-      content="pndc-homegrown-initiative-test-server.netlify.app"
-    />
+    <meta property="twitter:domain" content="http://www.homegrownmc.com/" />
     <meta
       name="twitter:image:alt"
       content="The Homepage for the Homegrown Mercer County Site"
     />
-    <meta
-      property="twitter:url"
-      content="https://pndc-homegrown-initiative-test-server.netlify.app"
-    />
+    <meta property="twitter:url" content="http://www.homegrownmc.com/" />
     <meta
       name="twitter:title"
       content="Homegrown Mercer County - By Penn-Northwest's Homegrown Initiative"
