Changed all <meta> image preview links to https://i.imgur.com/WJWiRjX.png

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       property="og:description"
       content="Helping those in Mercer County, PA, Find Work, Homes, Schools, Activities, and Community"
     />
-    <meta property="og:image" content="https://i.imgur.com/8Osedu6.png" />
+    <meta property="og:image" content="https://i.imgur.com/WJWiRjX.png" />
 
     <!---------------------------------------------- Twitter Meta Tags ---------------------------------------------->
     <meta name="twitter:card" content="summary_large_image" />
@@ -43,7 +43,7 @@
       name="twitter:description"
       content="Helping those in Mercer County, PA, Find Work, Homes, Schools, Activities, and Community"
     />
-    <meta name="twitter:image" content="https://i.imgur.com/8Osedu6.png" />
+    <meta name="twitter:image" content="https://i.imgur.com/WJWiRjX.png" />
 
     <link rel="shortcut icon" href="./images/favicon/favicon.ico" />
     <!-- Bootstrap Files -->
