--- a/pages/learn.html
+++ b/pages/learn.html
@@ -22,7 +22,7 @@
     />
     <meta property="og:site_name" content="Homegrown Mercer County" />
 
-    <meta property="og:image" content="https://i.imgur.com/8Osedu6.png" />
+    <meta property="og:image" content="https://i.imgur.com/WJWiRjX.png" />
 
     <!--------------------------------------- Twitter Meta Tags --------------------------------------->
     <meta name="twitter:card" content="summary_large_image" />
@@ -40,7 +40,7 @@
       name="twitter:description"
       content="Helping those in Mercer County, PA, Find Work, Homes, Schools, Activities, and Community"
     />
-    <meta name="twitter:image" content="https://i.imgur.com/8Osedu6.png" />
+    <meta name="twitter:image" content="https://i.imgur.com/WJWiRjX.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="../images/favicon/favicon.ico" />
     <!-- Bootstrap Files -->
