Changed work page iterator numbers

--- a/pages/work.html
+++ b/pages/work.html
@@ -170,7 +170,7 @@
         </h2>
 
         <h2 class="text-light display-2 text-center">
-          <span class="text-end" id="two"></span> Schools
+          <span class="text-end" id="two"></span> Colleges
         </h2>
         <h2 class="text-light display-2 text-center">
           <span class="text-end" id="three"></span> Job Openings
